--- a/Final_Project_CPP/Final_Project_CPP/Final_Project_CPP.vcxproj.filters
+++ b/Final_Project_CPP/Final_Project_CPP/Final_Project_CPP.vcxproj.filters
@@ -15,10 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="mian.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Sensor.cpp">
+    <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="DataBase.cpp">
@@ -35,9 +32,6 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Sensor.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="DataBase.h">
       <Filter>Header Files</Filter>
     </ClInclude>
