Changed txt to json

--- a/Final_Project_CPP/CPP final/CPP final.vcxproj
+++ b/Final_Project_CPP/CPP final/CPP final.vcxproj
@@ -31,7 +31,7 @@
     <ClInclude Include="ClientGenerator.hpp" />
   </ItemGroup>
   <ItemGroup>
-    <Text Include="data.txt" />
+    <Text Include="data.json" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
