--- a/Final_Project_CPP/CPP final/CPP final.vcxproj.filters
+++ b/Final_Project_CPP/CPP final/CPP final.vcxproj.filters
@@ -43,6 +43,6 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <Text Include="data.txt" />
+    <Text Include="data.json" />
   </ItemGroup>
 </Project>
